About Me updates

--- a/css/agency.css
+++ b/css/agency.css
@@ -650,8 +650,8 @@ section h3.section-subheading {
     border: 7px solid #f1f1f1;
     border-radius: 100%;
     text-align: center;
-    color: #fff;
-    background-color: #cc0000;
+    color:#b2d8b2;
+    background-color: #fff;
 }
 
 .timeline>li .timeline-image h4 {
