--- a/css/agency.css
+++ b/css/agency.css
@@ -53,7 +53,7 @@ h5,
 h6 {
     text-transform: uppercase;
     font-family: Josefin Sans,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .img-centered {
@@ -407,7 +407,7 @@ section h3.section-subheading {
 
 #portfolio .portfolio-item .portfolio-caption h4 {
     margin: 0;
-   /*  text-transform: none; */
+    text-transform: none;
 }
 
 #portfolio .portfolio-item .portfolio-caption p {
